baml_language/crates/baml_tests/snapshots/compiles/testset_dynamic/baml_tests__compiles__testset_dynamic__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 33210
---
=== PPIR ===
function user.$init_test_main(registry: testing.TestCollector) -> ?  [expr] {
  { registry.register_test_set("dynamic tests", (testset: testing.TestCollector) -> void { { let cases = ["hello", "world", "foo"]; for case in cases { testset.register_test("check case", () -> { {  } assert.not_null(case) }, null) } } null }, null); registry.register_test_set("conditional tests", (testset: testing.TestCollector) -> void { { { let run_slow = false; testset.register_test("always runs", () -> { {  } assert.is_true(true) }, null) } if (run_slow) { testset.register_test("only when slow", () -> { {  } assert.is_true(true) }, null) } } null }, null) } null
}

--- captures ---
lambda () in ?: captures [case]
