baml_language/crates/baml_tests/snapshots/compiles/testset_dynamic/baml_tests__compiles__testset_dynamic__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.$init_test_28(registry: testing.TestCollector) -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: testing.TestCollector // registry // param
    let _2: void
    let _3: (testing.TestCollector) -> void throws unknown
    let _4: void
    let _5: (testing.TestCollector) -> void throws unknown

    bb0: {
        _3 = make_closure lambda[0]();
        _2 = call const fn testing.TestCollector.register_test_set(copy _1, const "dynamic tests", copy _3, const null) -> [bb1];
    }

    bb1: {
        _5 = make_closure lambda[1]();
        _4 = call const fn testing.TestCollector.register_test_set(copy _1, const "conditional tests", copy _5, const null) -> [bb2];
    }

    bb2: {
        _0 = const null;
        goto -> bb3;
    }

    bb3: {
        return;
    }
}

// lambda[0]
fn .<lambda($init_test_28, 0)>(testset: testing.TestCollector) -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: testing.TestCollector // testset // param
    let _2: string[] // cases
    let _3: string[]
    let _4: int // __for_idx
    let _5: int
    let _6: bool
    let _7: string
    let _8: string // case [captured]
    let _9: void
    let _10: () -> void throws unknown

    bb0: {
        _2 = [const "hello", const "world", const "foo"];
        _3 = copy _2;
        _4 = const 0_i64;
        goto -> bb1;
    }

    bb1: {
        _5 = len(_3);
        _6 = copy _4 < copy _5;
        branch copy _6 -> [bb4, bb2];
    }

    bb2: {
        _0 = const null;
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        _7 = copy _3[_4];
        fresh_cell(_8);
        _8 = copy _7;
        _10 = make_closure lambda[0](copy _8);
        _9 = call const fn testing.TestCollector.register_test(copy _1, const "check case", copy _10, const null) -> [bb5];
    }

    bb5: {
        _4 = copy _4 + const 1_i64;
        goto -> bb1;
    }
}

// lambda[0]
fn .<lambda(<lambda($init_test_28, 0)>, 1)>() -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: string

    bb0: {
        _1 = copy capture[0];
        _0 = call const fn assert.not_null(copy _1) -> [bb1];
    }

    bb1: {
        return;
    }
}

// lambda[1]
fn .<lambda($init_test_28, 2)>(testset: testing.TestCollector) -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: testing.TestCollector // testset // param
    let _2: bool // run_slow
    let _3: void
    let _4: () -> void throws unknown
    let _5: bool
    let _6: void
    let _7: () -> void throws unknown

    bb0: {
        _2 = const false;
        _4 = make_closure lambda[0]();
        _3 = call const fn testing.TestCollector.register_test(copy _1, const "always runs", copy _4, const null) -> [bb1];
    }

    bb1: {
        _5 = copy _2;
        branch copy _5 -> [bb2, bb3];
    }

    bb2: {
        _7 = make_closure lambda[1]();
        _6 = call const fn testing.TestCollector.register_test(copy _1, const "only when slow", copy _7, const null) -> [bb3];
    }

    bb3: {
        _0 = const null;
        goto -> bb4;
    }

    bb4: {
        return;
    }
}

// lambda[0]
fn .<lambda(<lambda($init_test_28, 2)>, 3)>() -> null {
    // Locals:
    let _0: null // _0 // return

    bb0: {
        _0 = call const fn assert.is_true(const true) -> [bb1];
    }

    bb1: {
        return;
    }
}

// lambda[1]
fn .<lambda(<lambda($init_test_28, 2)>, 4)>() -> null {
    // Locals:
    let _0: null // _0 // return

    bb0: {
        _0 = call const fn assert.is_true(const true) -> [bb1];
    }

    bb1: {
        return;
    }
}
