baml_language/crates/baml_tests/snapshots/compiles/testset_dynamic/baml_tests__compiles__testset_dynamic__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.$init_test_25(registry: testing.TestCollector) -> ? throws never {
  { : null
    registry.register_test_set("dynamic tests", (testset: testing.TestCollector) -> void { ... }, null) : void
      (testset: testing.TestCollector) -> void { ... } : (testset: testing.TestCollector) -> void throws unknown
        {
          let cases = ["hello", "world", "foo"]
          for let case in cases
            {
              testset.register_test("check case", () -> { ... }, null)
            }
          null
        }
    registry.register_test_set("conditional tests", (testset: testing.TestCollector) -> void { ... }, null) : void
      (testset: testing.TestCollector) -> void { ... } : (testset: testing.TestCollector) -> void throws unknown
        {
          {
            let run_slow = false
            testset.register_test("always runs", () -> { ... }, null)
            if (run_slow)
              {
                testset.register_test("only when slow", () -> { ... }, null)
              }
          }
          null
        }
    null : null
  }
}
lambda user.$init_test_25 {
}
lambda user.$init_test_25 {
}
lambda user.$init_test_25 {
}
lambda user.$init_test_25 {
}
lambda user.$init_test_25 {
}
