baml_language/crates/baml_tests/snapshots/compiles/testset_dynamic/baml_tests__compiles__testset_dynamic__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 21201
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
